--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -96,11 +96,11 @@
               <div class="rd-navbar-nav-wrap">
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
-                  <li><a href="/home">Home</a>
+                  <li><a href="/home">{{'baseHome' | translate}}</a>
                   </li>
-                  <li><a href="/about">About Us</a>
+                  <li><a href="/about">{{'baseAbout' | translate}}</a>
                   </li>
-                  <li class="active"><a href="/contacts">Contacts</a>
+                  <li class="active"><a href="/contacts">{{'baseContacts' | translate}}</a>
                 </ul>
               </div>
             </div>
@@ -111,11 +111,11 @@
       <section class="breadcrumbs-custom"
         style="background: url(../../../assets/images/_ocean.jpg); background-size: cover;">
         <div class="container">
-          <p class="breadcrumbs-custom-subtitle">Get in Touch with Us</p>
-          <p class="heading-1 breadcrumbs-custom-title">Contacts</p>
+          <p class="breadcrumbs-custom-subtitle">{{'contacts.inTouch' | translate}}</p>
+          <p class="heading-1 breadcrumbs-custom-title">{{'baseContacts' | translate}}</p>
           <ul class="breadcrumbs-custom-path">
-            <li><a href="/home">Home</a></li>
-            <li class="active">Contacts</li>
+            <li><a href="/home">{{'baseHome' | translate}}</a></li>
+            <li class="active">{{'baseContacts' | translate}}</li>
           </ul>
         </div>
       </section>
@@ -129,17 +129,17 @@
             <!-- Box minimal-->
             <article class="box-simple">
               <div class="box-simple-icon novi-icon mdi mdi-map-marker"></div>
-              <h6>Address</h6>
-              <div class="box-simple-text"><a href="#">2130 Fulton Street, Chicago, IL <br> 94117-1080 USA</a></div>
+              <h6>{{'address' | translate}}</h6>
+              <div class="box-simple-text"><a href="#">{{'compAddress' | translate}}</a></div>
             </article>
           </div>
           <div class="col-sm-6 col-lg-3">
             <!-- Box simple-->
             <article class="box-simple">
               <div class="box-simple-icon novi-icon mdi mdi-phone"></div>
-              <h6>phones</h6>
+              <h6>{{'phones' | translate}}</h6>
               <div class="box-simple-text">
-                <ul class="list-comma list-0">
+                <ul class="list list-0">
                   <li><a href="tel:#">1-800-6543-765</a></li>
                   <li><a href="tel:#">1-800-3434-876</a></li>
                 </ul>
@@ -150,9 +150,9 @@
             <!-- Box simple-->
             <article class="box-simple">
               <div class="box-simple-icon novi-icon mdi mdi-email-open"></div>
-              <h6>e-mail</h6>
+              <h6>{{'email' | translate}}</h6>
               <div class="box-simple-text">
-                <ul class="list-comma list-0">
+                <ul class="list list-0">
                   <li><a href="mailto:#">mail&#64;demolink.org</a></li>
                 </ul>
               </div>
@@ -162,11 +162,11 @@
             <!-- Box simple-->
             <article class="box-simple">
               <div class="box-simple-icon novi-icon mdi mdi-calendar-clock"></div>
-              <h6>opening hours</h6>
+              <h6>{{'hours' | translate}}</h6>
               <div class="box-simple-text">
                 <ul class="list-0">
-                  <li>Mon–Fri: 9:00 am–6:00 pm</li>
-                  <li>Sat–Sun: 11:00 am–4:00 pm</li>
+                  <li>{{'day1' | translate}}: 9:00 – 18:00</li>
+                  <li>{{'day2' | translate}}: 11:00 – 16:00</li>
                 </ul>
               </div>
             </article>
@@ -182,52 +182,51 @@
           <div class="row row-fix row-50">
             <div class="col-lg-8 col-xl-7">
               <div class="section-wrap-content section-lg">
-                <h3>Contact us</h3>
+                <h3>{{'contactUs' | translate}}</h3>
                 <hr class="divider divider-left divider-secondary">
-                <p class="big">You can contact us any way that is convenient for you. We are available 24/7 via fax or
-                  email. You can also use a quick contact form below or visit our office personally.</p>
+                <p class="big">{{'contacts.canContact' | translate}}</p>
                 <!-- RD Mailform-->
                 <form class="rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post"
                   action="bat/rd-mailform.php">
                   <div class="row row-fix row-20">
                     <div class="col-md-6">
                       <div class="form-wrap form-wrap-validation">
-                        <label class="form-label-outside" for="form-1-name">First name</label>
+                        <label class="form-label-outside" for="form-1-name">{{'firstName' | translate}}</label>
                         <input class="form-input" id="form-1-name" type="text" name="name"
                           data-constraints="@Required" />
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-wrap form-wrap-validation">
-                        <label class="form-label-outside" for="form-1-last-name">Last name</label>
+                        <label class="form-label-outside" for="form-1-last-name">{{'lastName' | translate}}</label>
                         <input class="form-input" id="form-1-last-name" type="text" name="last-name"
                           data-constraints="@Required" />
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-wrap form-wrap-validation">
-                        <label class="form-label-outside" for="form-1-email">E-mail</label>
+                        <label class="form-label-outside" for="form-1-email">{{'email' | translate}}</label>
                         <input class="form-input" id="form-1-email" type="email" name="email"
                           data-constraints="@Email @Required" />
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-wrap form-wrap-validation">
-                        <label class="form-label-outside" for="form-1-phone">Phone</label>
+                        <label class="form-label-outside" for="form-1-phone">{{'phone' | translate}}</label>
                         <input class="form-input" id="form-1-phone" type="text" name="phone"
                           data-constraints="@Numeric @Required" />
                       </div>
                     </div>
                     <div class="col-sm-12">
                       <div class="form-wrap form-wrap-validation">
-                        <label class="form-label-outside" for="form-1-message">Message</label>
+                        <label class="form-label-outside" for="form-1-message">{{'message' | translate}}</label>
                         <textarea class="form-input" id="form-1-message" name="message"
                           data-constraints="@Required"></textarea>
                       </div>
                     </div>
                     <div class="col-sm-12 offset-custom-1">
                       <div class="form-button">
-                        <button class="button button-secondary button-nina" type="submit">send message</button>
+                        <button class="button button-secondary button-nina" type="submit">{{'sendMessage' | translate}}</button>
                       </div>
                     </div>
                   </div>
@@ -237,24 +236,7 @@
           </div>
         </div>
         <div class="section-wrap-aside">
-          <!-- RD Google Map-->
-          <!-- <div class="google-map-container google-map-with-icon rd-google-map__model" data-zoom="5"
-            data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-icon="../../../assets/images/gmap_marker.png"
-            data-icon-active="../../../assets/images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},
-            {&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},
-            {&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},
-            {&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},
-            {&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},
-            {&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},
-            {&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},
-            {&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},
-            {&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
-            <div class="google-map"></div>
-            <ul class="google-map-markers">
-              <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45."
-                data-description="9870 St Vincent Place, Glasgow"></li>
-            </ul>
-          </div> -->
+          <!-- RD Yandex Map-->
           <iframe src="https://yandex.com/map-widget/v1/?um=constructor%3A6196593061d2b256c75128415039db05d5b9c69a7f46702f0ff4392ab4d26176&amp;source=constructor" width="500" height="755" frameborder="0"></iframe>
         </div>
       </div>
@@ -267,7 +249,7 @@
           <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo"
                 src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208" height="46" /></a></div>
           <div class="col-md-10 col-lg-7 col-xl-4">
-            <p class="right">&#169;&nbsp;<span class="copyright-year"></span> All Rights Reserved.
+            <p class="right">&#169;&nbsp;<span class="copyright-year"></span>{{'allRights' | translate}}
           </div>
           <div class="col-md-10 col-lg-7 col-xl-4 text-xl-right">
             <ul class="group-xs group-middle">
