--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -20204,3 +20204,27 @@ html[dir="rtl"] .lg-css3.lg-slide.lg-use-css3 .lg-item.lg-current {
   background-image: url("../images/tolibjonimg.jpg");
   background-size: cover;
 }
+
+/*-------------*/
+
+/* body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  padding: 20px;
+} */
+
+.language-selector {
+  margin: 0px 0, 0, 0;
+  text-align: right;
+  display: inline-block;
+}
+
+.language-selector label {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+.language-selector select {
+  padding: 5px;
+  font-size: 16px;
+} 
