--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -96,6 +96,15 @@
               <div class="rd-navbar-nav-wrap">
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
+                  <li>
+                    <div style="text-align: center; margin-top: 2px; margin-left: 230px; vertical-align: middle;">
+                      <select (change)="changeLanguage($event)">
+                        <option value="en">Eng</option>
+                        <option value="ru">Ру</option>
+                        <option value="uz">O'z</option>
+                      </select>
+                    </div>
+                  </li>
                   <li><a href="/home">{{'baseHome' | translate}}</a>
                   </li>
                   <li><a href="/about">{{'baseAbout' | translate}}</a>
