--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -87,10 +87,11 @@
               <!-- RD Navbar Toggle-->
               <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
               <!-- RD Navbar Brand-->
-              <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default"
+              <!-- <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default"
                     src="../../../assets/images/logo-default-208x46.png" alt="" width="208" height="46" /><img
                     class="logo-inverse" src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208"
-                    height="46" /></a></div>
+                    height="46" /></a>
+              </div> -->
             </div>
             <div class="rd-navbar-aside-right">
               <div class="rd-navbar-nav-wrap">
@@ -235,7 +236,8 @@
                     </div>
                     <div class="col-sm-12 offset-custom-1">
                       <div class="form-button">
-                        <button class="button button-secondary button-nina" type="submit">{{'sendMessage' | translate}}</button>
+                        <button class="button button-secondary button-nina" type="submit">{{'sendMessage' |
+                          translate}}</button>
                       </div>
                     </div>
                   </div>
@@ -246,7 +248,9 @@
         </div>
         <div class="section-wrap-aside">
           <!-- RD Yandex Map-->
-          <iframe src="https://yandex.com/map-widget/v1/?um=constructor%3A6196593061d2b256c75128415039db05d5b9c69a7f46702f0ff4392ab4d26176&amp;source=constructor" width="500" height="755" frameborder="0"></iframe>
+          <iframe style="margin-top: 50px;"
+            src="https://yandex.com/map-widget/v1/?um=constructor%3A6196593061d2b256c75128415039db05d5b9c69a7f46702f0ff4392ab4d26176&amp;source=constructor"
+            width="500" height="755" frameborder="0"></iframe>
         </div>
       </div>
     </section>
@@ -255,8 +259,9 @@
     <footer class="section page-footer page-footer-minimal novi-background bg-cover text-center bg-gray-darker">
       <div class="container container-wide">
         <div class="row row-fix justify-content-sm-center align-items-md-center row-30">
-          <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo"
-                src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208" height="46" /></a></div>
+          <!-- <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo"
+                src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208" height="46" /></a>
+          </div> -->
           <div class="col-md-10 col-lg-7 col-xl-4">
             <p class="right">&#169;&nbsp;<span class="copyright-year"></span>{{'allRights' | translate}}
           </div>
@@ -283,8 +288,10 @@
   <!-- Javascript-->
   <script src="../../../assets/js/core.min.js"></script>
   <script src="../../../assets/js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
